force-app/main/default/objects/VATCash__c/VATCash__c.object-meta.xml
<CustomObject>
    <label>VAT+Cash</label>
    <nameField>
        <displayFormat>VTC-{000000}</displayFormat>
        <label>VAT+CASH ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VAT+Cash</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>