force-app/main/default/objects/VATCash__c/fields/AmountSellingInclTAXCash__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTAXCash__c</fullName>
    <label>AMOUNT SELLING INCL TAX-CASH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>